Fixed Nav, working on adding colors and alignments.

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -10,6 +10,7 @@
 nav {
     background-color: #FEC601 ;
     font-size: 3vh;
+    color: #0D3945;
 }
 
 body {
@@ -19,16 +20,16 @@ body {
 }
 
 a{
-    color: white;
+    color: #0D3945;
 }
 
 a:hover{
-    text-decoration: none;  
+    text-decoration: none;
 }
 
 a:visited{
-    color: dimgrey;
-
+    color: #0D3945;
+    text-decoration: none;
 }
 
 img {
@@ -39,23 +40,60 @@ img {
 
 button {
     background-color: #FEC601;
-    color: white;
+    color: #0D3945;
     /*margin: auto;*/
     /*width: 15%;*/
 }
 
 li {
     list-style-type: none;
+    display: block;
 
 }
+
+footer{
+    background-color: #FEC601;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    font-size: 2vh;
+    padding: 1vh;
+}
+
 .story {
     display: inline;
 }
+
 .about{
     align-content: left;
     margin-left: 3vw;
 }
 
+.about-button {
+    width: 40vw;
+    padding:auto;
+    margin: auto;
+}
+
+.footer-menu{
+    margin: 0;
+    padding: 0;
+    text-align: center;
+}
+
+.footer-menu li{
+    display: inline;
+    margin: 0 3vw;
+}
+
+.footer-menu form{
+    display: inline;
+}
+
+#deleteform button{
+    border: none;
+
+}
 #entry-button {
     width: 45vw;
     margin-top: 10vh;
@@ -79,22 +117,16 @@ li {
 }
 
 #logout-button {
-     width: 35vw;
-     padding:auto;
-     font-size: auto;
-     margin: auto;
- }
+    width: 35vw;
+    padding:auto;
+    font-size: auto;
+    margin: auto;
+}
 
 #story-button {
     width: 40vw;
     padding:auto;
     font-size: 2vh;
-    margin: auto;
-}
-
-.about-button {
-    width: 35vw;
-    padding:auto;
     margin: auto;
 }
 
